--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "bin": [
         "bin/gendiff"
     ],
+    "autoload": {
+        "files": [
+            "src/Help.php"
+        ]
+    },
     "require": {
         "docopt/docopt": "^1.0"
     },
