--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
             "email": "vasiliyantufev@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "phpunit/phpunit": "^8"
+    }
 }
