--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
     "name": "walle/difference-calculator",
-    "description": "Difference calculator",
     "type": "project",
     "bin": [
         "bin/gendiff"
+    ],
+    "description": "Difference calculator",
+    "keywords": [
+        "hexlet"
     ],
     "autoload": {
         "files": [
@@ -19,7 +22,6 @@
             "email": "vasiliyantufev@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require-dev": {
         "phpunit/phpunit": "^8"
     }
