--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     ],
     "autoload": {
         "files": [
-            "src/Help.php"
+            "src/Help.php",
+            "src/Differ.php"
         ]
     },
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "funct/funct": "^1.5"
     },
     "authors": [
         {
@@ -22,7 +24,11 @@
             "email": "vasiliyantufev@gmail.com"
         }
     ],
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
