--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
     ],
     "autoload": {
         "files": [
-            "src/Differ.php"
+            "src/Differ.php",
+            "src/Display.php",
+            "src/ASTTree.php",
+            "src/Parser.php"
         ]
     },
     "require": {
