--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         }
     ],
     "scripts": {
-        "phpcs": "phpcs"
+        "phpcs": "phpcs",
+        "phpunit": "phpunit"
     },
     "require-dev": {
         "phpunit/phpunit": "^8",
